# Random_code

./: README.md
C - Scats game/: finalproject.c  functions.h
Python_projects/: battleship.py  maze_solver.py  railyard.py
queues/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
queues/src/: CMakeLists.txt  linked_list.c  linked_list.h  linked_list_example.c  queue_fifo.c  queue_fifo.h  queue_fifo_example.c  queue_lifo.c  queue_lifo.h  queue_lifo_example.c
