add_executable(linked_list_example
  linked_list.h
  linked_list.c
  linked_list_example.c)

add_executable(fifo_queue_example
  queue_fifo.h
  queue_fifo.c
  linked_list.h
  linked_list.c
  queue_fifo_example.c)

add_executable(lifo_queue_example
  queue_lifo.h
  queue_lifo.c
  linked_list.h
  linked_list.c
  queue_lifo_example.c)
